<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@drawable/search_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about" tools:context="my.edu.unikl.gotravel.AboutActivity">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal" />

   <!-- <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceMedium" />-->

   <!-- <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignBottom="@+id/about"
        android:layout_alignParentStart="true" />-->


    <WebView
        android:id="@+id/developer"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:layout_below="@id/about"
        android:layout_gravity="center_horizontal" />

   <!-- <Space
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_alignBottom="@+id/developer"
        android:layout_alignParentStart="true" />-->


    <WebView
        android:id="@+id/supervisor"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supervisor"
        android:layout_below="@id/developer"
        android:layout_gravity="center_horizontal" />



    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="Developed by :"
        android:layout_below="@id/about"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/developer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/developer1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/developer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/developer2"
        android:textAppearance="?android:attr/textAppearanceMedium" />-->


</LinearLayout>
