<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@drawable/eiffel"
    tools:context="my.edu.unikl.gotravel.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="235dp"
        android:orientation="vertical"
        android:background="@drawable/search_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:paddingBottom="10dp"
            android:text="Let's Go Travel!" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_origin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/autocomplete_hint_origin"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_destination"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/autocomplete_hint_destination"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:singleLine="true" />


        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/webView"
            android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/place_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text=""
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/place_attribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text=""
        android:visibility="gone"
        android:paddingTop="@dimen/vertical_page_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <EditText
        android:id="@+id/origin_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/origin_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/destination_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/destination_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_search"
            android:id="@+id/json"
            android:layout_below="@+id/autocomplete_destination"
            android:onClick="searchResultActivity"
            android:textColor="@color/common_signin_btn_light_text_pressed"
            android:background="@drawable/search_button_background"
            android:width="200dp"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton android:id="@+id/info_fab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_info" />

</android.support.design.widget.CoordinatorLayout>